Fix grid content layout becoming too tall
The grid rows for the content layout were both set to 1fr, meaning they
both retained the same size. However, if one row expanded to fit its
content, the other would match its growth.

In some instances, this caused the content section to become larger than
it needed to be. Setting the top row to auto removes the need for both
rows to be the same size, fixing the issue.

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ input[type="search"]:focus {
     grid-area: content;
     display: grid;
     grid-template-columns: 1fr 250px;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas: 
         'cards announcements'
         'cards trending';
